@@ -681,7 +681,7 @@ function system_menu() {
   );
   $items['admin/content/rss-publishing'] = array(
     'title' => 'RSS publishing',
-    'description' => 'Configure the number of items per feed and whether feeds should be titles/teasers/full-text.',
+    'description' => 'Configure the site description, the number of items per feed and whether feeds should be titles/teasers/full-text.',
     'page callback' => 'drupal_get_form',
     'page arguments' => array('system_rss_feeds_settings'),
     'access arguments' => array('administer site configuration'),
@@ -1127,6 +1127,7 @@ function system_theme_default() {
       'content' => 'Content',
       'header' => 'Header',
       'footer' => 'Footer',
+      'highlight' => 'Highlighted content',
       'help' => 'Help',
     ),
     'description' => '',
@@ -1134,7 +1135,6 @@ function system_theme_default() {
       'comment_user_picture',
       'comment_user_verification',
       'favicon',
-      'mission',
       'logo',
       'name',
       'node_user_picture',
