@@ -520,7 +520,7 @@ body.two-sidebars #footer {
   color: #529ad6;
 }
 
-#mission {
+#highlight {
   padding: 1em;
   background-color: #fff;
   border: 1px solid #e0e5fb;
