@@ -109,7 +109,9 @@ Drupal 7.0, xxxx-xx-xx (development version)
     * Provides a subset of the features of the Content Construction
       Kit (CCK) module.
 - Page organization
-    * Made the help text area a full featured region with blocks. 
+    * Made the help text area a full featured region with blocks.
+    * Site mission is replaced with the highlighted content block region and 
+      separate RSS feed description settings.  
 - Upgraded the core JavaScript library to jQuery version 1.3.2.
 - Upgraded the jQuery Forms library to 2.21.
 
